# arduino-esp32

./: .gitmodules  CMakeLists.txt
cores/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/BLE/: CMakeLists.txt
tools/sdk/: CMakeLists.txt
